--- a/music-subpages/orch-arrangements.html
+++ b/music-subpages/orch-arrangements.html
@@ -113,10 +113,10 @@
     </nav>
 
     <div class="container">
-        <h1 class="mt-4">100+ Orchestral Arrangements for 12-22 Players</h1>
+        <h1 class="mt-4">140+ Orchestral Arrangements for 10-22 Players</h1>
 
         <p class="fw-bold">WHERE TO PUT THIS INFORMATION? It's not directly referenced in the
-        dossier. (Appendix IV-K-3)<br>
+        dossier. (Appendix IV-K-3) </p>[dd 10-28-24: keep it under the Music heading, but we can also include it under 'Music and Engineering' heading] <br>
 
         <a href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
         target="_blank">This document</a>—organized by academic year—gives
@@ -130,18 +130,17 @@
         <p>Students in the Olin Conductorless Orchestra (OCO) select their own
         repertoire.  In general, they favor big romantic pieces typically played
         by 70+ musicians (~50 strings and 24 wind/brass/percussion).  But Olin
-        has a small student body which has resulted in a nontraditional
-        instrumentation since OCO’s inception.  This means every piece must be
+        has a small student body which has resulted in  nontraditional
+        instrumentation since OCO’s inception in Fall 2002.  This means every piece must be
         re-orchestrated to suit each semester’s available instruments.  For
         example, OCO winds and brass can outnumber the strings, and vice versa,
         so balance has to be achieved through often unorthodox means.</p>   
 
-        <p>My 100+ arrangements have enabled a small school like Olin to have an
-        orchestra, despite OCO’s eclectic instrumentation, thus contributing to
-        student development, as well as building & sustaining the college. These
-        arrangements can now help other engineering schools form their own
+        <p>My 140+ arrangements have enabled a small school like Olin to have an
+        orchestra, despite OCO’s eclectic instrumentation. They
+        can also help other engineering schools form their own
         orchestras since these schools will likely lack a full complement of
-        standard instruments completing their string, wind, and brass sections.
+        standard instruments comprising their string, wind, and brass sections.
         The arrangements are portable to other engineering schools via the
         Engineers’ Conductorless Orchestra website Hub, an externally-facing
         site with the mission of helping others outside the Olin community
@@ -153,7 +152,7 @@
         different colorations, strategic doublings, and effective solos/duets.
         Yet constraints exist, e.g., the comfort ranges of the OCO musicians.
         Simply substituting one instrument isn’t an option:  given the eclectic
-        instrumentation of the last 17 years, a great group sound has to be
+        instrumentation of the last 22 years, a great group sound has to be
         created by imaginative voice leading, unorthodox doubling (e.g., violins
         with glockenspiel), timbral sleight-of-hand (e.g., blending a tenor sax
         into an 18th century symphony), and other means. </p>
@@ -198,12 +197,12 @@
             found in an orchestra such as piano and saxophone (e.g., my
             arrangement of the Berlioz “Marche Hongroise”), an over-abundance of
             clarinets—or none at all—as can be heard in my arrangements of
-            Haydn’s Symphony No. 48 and Gershwin’s An American in Paris,
+            Haydn’s Symphony No. 48 and Gershwin’s <em>An American in Paris</em>,
             respectively.  Frequently I’ll compensate an over-abundance of a
             given instrument (such as flute) by combining each of the ‘too many
             flutes’ with other instruments to create hybrid instruments that
-            hide the recognizable flute timbre (as I did with An American in
-            Paris).  At other times, I’ll score the non-traditional instrument
+            hide the recognizable flute timbre (as I did with <em>An American in
+            Paris</em>).  At other times, I’ll score the non-traditional instrument
             (e.g., tenor sax) in a register where it will blend best with the
             other instruments to create a coherent group sound (as with Haydn’s
             Symphony No. 48).</li>
@@ -232,8 +231,8 @@
             Spring 2016, OCO only had six violins. Though some of the OCO
             violinists could technically play these parts, the results would
             have been thin and anticlimactic in comparison with the intended
-            larger violin section of the orchestra which gave its world première
-            (the New York Philharmonic).  So to achieve these climactic
+            large violin section of the orchestra which gave its 1893 world première
+            (Philharmonic Society of New York).  So to achieve these climactic
             passages, I scored the stratospheric lines for both glockenspiel and
             piano (right hand in octaves), doubled at the octave below by all
             six violins so that their overtones would support the glockenspiel
@@ -249,7 +248,7 @@
             variety for the players, as can be heard in all my arrangements for
             OCO.</li>
                 
-            <li>Reduction from 90+ player orchestrations to 12-22 player
+            <li>Reduction from 90+ player orchestrations to 10-22 player
             arrangements (e.g., the 24 wind/brass instruments required for
             <em>An American in Paris</em> vs. the eight available in OCO ), or
             an increase in forces, as from a wind ensemble to a mixed
@@ -285,7 +284,7 @@
 
             <p><a
             href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"
-            target="_blank">This document</a> examines seven of my orchestral
+            target="_blank">This document</a> examines eight of my orchestral
             arrangements, showing how I created stylistic consistency and a coherent
             group sound for OCO despite eclectic instrumentation and unbalanced
             wind, brass, and string sections.  Scores of these orchestral
@@ -294,16 +293,15 @@
             target="_blank">this document</a>.</p>
 
             <p><b>In sum</b>, by creating orchestral arrangements for the Olin
-            Conductorless Orchestra, I demonstrated <em>Leadership and Impact</em>
-            across Olin’s faculty goals of developing students, external impact, and
+            Conductorless Orchestra, I sought to not only establish its viability but also support goals of developing students, providing external impact, and
             building & sustaining the College (Map 1).  These arrangements enabled
-            our students and community to have an orchestra for the past 17
-            years—despite an eclectic array of available instruments—an orchestra
+            our students and community to have an orchestra for the past 22
+            years—despite an eclectic array of instruments—an orchestra
             that has helped students grow, both as players and listeners; an
             orchestra that has had a positive impact on prospective students, their
             families, and wider communities outside Olin; an orchestra that by
             virtue of its being conductorless has contributed to Olin’s reputation
-            for innovation in engineering education.  Thus, though Project K lies in
+            for innovation in engineering education.  Thus, though this project lies in
             the music space, it also inhabits the engineering space (Map 2).  The
             table below captures the role played by each of my three overarching
             themes in producing these arrangements, thus elaborating upon Map 3.
