--- a/music-subpages/musical-works.html
+++ b/music-subpages/musical-works.html
@@ -186,7 +186,7 @@
 
         <!-- <img class="center-img" src="../images/music-images/musical_works_overarching_themes.JPG"> -->
 
-        <h2>DISCIPLINARY AND INTERDISCIPLINARY WORK FOR EXTERNAL IMPACT, DEVELOPING STUDENTS, BUILDING & SUSTAINING OLIN COLLEGE 
+        <h2>DISCIPLINARY AND INTERDISCIPLINARY WORK FOR EXTERNAL IMPACT, DEVELOPING STUDENTS, BUILDING & SUSTAINING OLIN COLLEGE</h2> 
             
             
             <!-- (MAP 1)—ENCOMPASSING BOTH DISCIPLINARY AND INTERDISCIPLINARY WORK (MAP 2)—EMBODYING THREE OVERARCHING THEMES (MAP 3) </h2> -->
