--- a/music-subpages/orch-arrangements.html
+++ b/music-subpages/orch-arrangements.html
@@ -116,7 +116,7 @@
         <h1 class="mt-4">140+ Orchestral Arrangements for 10-22 Players</h1>
 
         <p class="fw-bold">WHERE TO PUT THIS INFORMATION? It's not directly referenced in the
-        dossier. (Appendix IV-K-3) </p>[dd 10-28-24: keep it under the Music heading, but we can also include it under 'Music and Engineering' heading] <br>
+        dossier. (Appendix IV-K-3) --- [dd 10-28-24: keep it under the Music heading, but we can also include it under 'Music and Engineering' heading] </p><br>
 
         <a href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
         target="_blank">This document</a>—organized by academic year—gives
