Updated all new docs from OneDrive

--- a/music-subpages/orch-arrangements.html
+++ b/music-subpages/orch-arrangements.html
@@ -115,10 +115,7 @@
     <div class="container">
         <h1 class="mt-4">140+ Orchestral Arrangements for 10-22 Players</h1>
 
-        <p class="fw-bold">WHERE TO PUT THIS INFORMATION? It's not directly referenced in the
-        dossier. (Appendix IV-K-3) --- [dd 10-28-24: keep it under the Music heading, but we can also include it under 'Music and Engineering' heading] </p><br>
-
-        <a href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
+        <a href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
         target="_blank">This document</a>—organized by academic year—gives
         orchestral arrangements that can be accessed at <a
         href="https://pages.olin.edu/eco-summer2019" target="_blank">The Engineers’
@@ -160,8 +157,9 @@
         <p>Here is a short summary of my process for creating orchestral
         arrangements for the Olin Conductorless Orchestra. (The specific
         re-orchestrations mentioned below are elaborated further in <a
-        href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"
+        href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
         target="_blank">this document</a>).</b></p>
+
 
         <ul>
             <li>At the start of each semester I ask students for their
@@ -283,15 +281,17 @@
         </ul>
 
             <p><a
-            href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"
+            href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"
             target="_blank">This document</a> examines eight of my orchestral
             arrangements, showing how I created stylistic consistency and a coherent
             group sound for OCO despite eclectic instrumentation and unbalanced
             wind, brass, and string sections.  Scores of these orchestral
             arrangements can be found in <a
-            href="../website-documents/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-2-arrangement-scores.pdf"
+            href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-2-arrangement-scores.pdf"
             target="_blank">this document</a>.</p>
 
+            <p>This breakdown of one of my compositions, <a href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-4-september-quartet.pdf"
+                target="_blank"><i>September Quartet (2011)</i></a>, gives a peek into one of my works.</p>
             <p><b>In sum</b>, by creating orchestral arrangements for the Olin
             Conductorless Orchestra, I sought to not only establish its viability but also support goals of developing students, providing external impact, and
             building & sustaining the College (Map 1).  These arrangements enabled
