Update all nav bars

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="eng.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Engineering</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="eng-subpages/masters.html">Master's</a></li>
                             <li><a class="dropdown-item" href="eng-subpages/patents-trademarks.html">Patents & Trademarks</a></li>
                         </ul>
                     </li>
@@ -106,7 +105,7 @@
             <div class="col">
                 <b>Engineer & Inventor</b>
                 <p>As an engineer, I hold SM and PhD degrees in Electrical Engineering and Computer Science from MIT. My doctoral thesis combined chaos science and electrical engineering to create musical variations of the pitch sequence of a MIDI song. I've since invented techniques for creating rhythmic and pitch variations of MIDI and audio songs, including mashups. This work has been awarded $300k in NSF grants for research and development.</p>
-                <a class="btn btn-outline-dark mb-4" href="eng-subpages/masters.html" role="button">Learn More</a>
+                <a class="btn btn-outline-dark mb-4" href="eng-subpages/patents-trademarks.html" role="button">Learn More</a>
             </div>
             <div class="col">
                 <b>Entrepreneurial Thinker</b>
