--- a/music-eng-subpages/engineers-orch.html
+++ b/music-eng-subpages/engineers-orch.html
@@ -51,7 +51,6 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Engineering</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../eng-subpages/masters.html">Master's</a></li>
                             <li><a class="dropdown-item" href="../eng-subpages/patents-trademarks.html">Patents & Trademarks</a></li>
                         </ul>
                     </li>
@@ -73,6 +72,7 @@
   
     <div class="container">
         <h1>The Engineers' Conductorless Orchestra (including OCO, the Olin Conductorless Orchestra)</h1>
+        <img src="../images/music-eng-images/diana-wired.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
 
     <div>
         <p>The Engineers’ Conductorless Orchestra covers three works, including a book chapter published by Springer Nature, a peer-reviewed conference paper (awarded ASEE Zone 1 Best Paper Prize), and a website hub designed to share the conductorless orchestra model with other engineering schools.  These interdisciplinary works combining music and engineering convey how a conductorless orchestra develops students by providing a project-based learning lab for developing effective leadership, teamwork, and communication skills.  The roles played by my three overarching themes enabled me to conceive of a self-directed orchestra for our new college, bring it to fruition—a time-intensive process developed over many years—and more recently, to introduce the model to engineering educators at other institutions.</p>
