--- a/ece.html
+++ b/ece.html
@@ -156,6 +156,7 @@
         </div>
 
         <h3>II. SIGNALS AND SYSTEMS:  2003, 2004, 2005, 2006, 2007, (ON LEAVE SPRING 2008), 2012, 2019</h3>
+        <img src="./images/eng-images/diana-signals-1.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
 
         <div>
             <p>What’s different about the 2012 and 2019 editions of Signals and Systems?  In addition to engineering content, they addressed written communication according to a professional rubric, required revision of written material, and encouraged students to explore applications that pique their curiosity. For the 2012 version of Signals and Systems, I completely re-vamped the course to achieve a fresh perspective. Since its topics pervade contemporary applications, I offered opportunities for research and a final project (lifelong learning, stimulation/impetus, and application). As with DSP, I wanted to provide preparation/scaffolding for the Final Project by giving each student a chance to research and present an application that captured interest. To foster intrinsic motivation, I brought over elements of Digital Signal Processing and Wired Ensemble, such as giving students a “long rope” (lifelong learning). Thus, they had free reign to present any application that employed signals and/or systems, which meant basically everything!</p> 
@@ -190,7 +191,8 @@
             <p>Here are <a href="../docs/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-2-signals-example-work.pdf">examples of assignments and student work.</a></p>
         </div>
 
-        <h3>III. COMING SOON:  ENGINEERING SYSTEM ANALYSIS—A NEW COURSE FOR SPRING 2020</h3>
+        <h3>III. ENGINEERING SYSTEM ANALYSIS</h3>
+        <img src="./images/eng-images/diana-signals-2.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
 
         <div>
             <p>Engineering Systems Analysis (ESA) involves building, developing, and practicing process-based quantitative analysis skills in the broad area comprising linear analysis of engineering systems. During the first half of the semester, all engineering students take ESA:Systems.  During the second half, mechanical engineers enroll in ESA:Dynamics, and electrical engineers enroll in ESA:Signals.</p>
