Added almost all pictures. Left out blurry ones

--- a/eng-subpages/patents-trademarks.html
+++ b/eng-subpages/patents-trademarks.html
@@ -114,6 +114,7 @@
     <div class="container">
         <h1>Patents & Trademarks Arising from the CantoVario Project, Issued by
         the USPTO</h1>
+        <img src="../images/diana-portrait-3.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
 
         <p>The following Intellectual Property (IP) arose from my work developing the CantoVario Projects. This interdisciplinary work harnesses chaotic system variability to produce musical variation. In wearing an engineer’s hat capped by a musician's, I devised engines for making musical variations of original works. Based on a natural mechanism for variability found in dissipative chaotic systems, i.e., the sensitivity of their solutions to initial conditions, these engines typically employ two chaotic trajectories that map the events of a musical work into a variation based on the original piece. The variations can be close to the original, diverge from it substantially, or achieve degrees of variability between these two extremes. The technique can serve as an idea generator or as a springboard for a dynamic music where a work changes from one hearing to the next—not in random ways—but rather by musical choice. The technique does not generate music or any other kind of data as random events; rather, it creates a rich set of variations on an already completed piece or sequence of symbols.</p>
 
