--- a/music-eng-subpages/grants.html
+++ b/music-eng-subpages/grants.html
@@ -72,9 +72,10 @@
 
     <div class="container">
         <h1>Grants Awarded</h1>
+        <img src="../images/diana-portrait-1.jpg" class="rounded float-end" style="height: 400px; margin-left: 10px">
         <p>Below is a list of all grants I have been awarded throughout my career. </p> 
 
-        <p><strong></strong>[2024] National Science Foundation (NSF) Research Experiences for Undergraduates (REU) Supplement Grant Award.</p> Managing Division Abbreviation: TI.  “Development of a Novel Audio Technology that Applies Dynamic System Variability to Create Musical Variations for Personal and Public Applications.” Diana Dabby, PI.  Proposal No. 2430997.  Award No. (FAIN):  1941526.  Summer 2024 support for Wellesley summer research student. 8K. </p>
+        <p><strong>[2024] National Science Foundation (NSF) Research Experiences for Undergraduates (REU) Supplement Grant Award.</strong>Managing Division Abbreviation: TI.  “Development of a Novel Audio Technology that Applies Dynamic System Variability to Create Musical Variations for Personal and Public Applications.” Diana Dabby, PI.  Proposal No. 2430997.  Award No. (FAIN):  1941526.  Summer 2024 support for Wellesley summer research student. 8K. </p>
 
         <p><strong>[2023] NSF Research Experiences for Undergraduates (REU) Supplement Grant Award.</strong> Managing Division Abbreviation: TI.  “Development of a Novel Audio Technology that Applies Dynamic System Variability to Create Musical Variations for Personal and Public Applications.” Diana Dabby, PI.  Proposal No. 2329978.  Award No. (FAIN):  1941526.  Summer 2023 support for 2 students, one from MIT and the other from Princeton University.  16K. </p>
 
