--- a/music-eng-subpages/publication-science.html
+++ b/music-eng-subpages/publication-science.html
@@ -72,6 +72,7 @@
 
     <div class="container">
         <h1>Publication in Science</h1>
+        <img src="../images/diana-portrait-2.JPG" class="rounded float-end" style="height: 400px; margin-left: 10px">
         <p>October 28, 2007, turned out to be one of those days where in the morning, the electrical engineering side of me was giving an invited plenary for the 2007 International Conference on Complex Systems entitled “Engineering Chaos and Musical Variation” and the musical side was rushing to a dress rehearsal of the Olin Conductorless Orchestra for an afternoon performance of Haydn and Beethoven for Olin’s Fall Admissions Open House.  It was a memorable day, one that also contained a surprise. </p> 
 
         <p>A senior editor from the journal Science was in the audience during the presentation I gave on my work with musical variation and chaos theory at the Complex Systems Conference.  A month later, I received an email from the Perspectives editor of <i>Science</i> asking if I would write an article on creating musical variation that would set the context for my work, including audio examples.  Writing that article felt like writing a piece of music:  complete engagement as one thought flowed to the next.</p>
