--- a/music-subpages/orch-arrangements.html
+++ b/music-subpages/orch-arrangements.html
@@ -113,6 +113,8 @@
 
     <div class="container">
         <h1 class="mt-4">140+ Orchestral Arrangements for 10-22 Players</h1>
+        <img src="../images/music-images/diana-piano-2.jpg" class="rounded float-end" style="height: 400px; margin-left: 10px">
+
 
         <a href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-3-yearly-arrangements.pdf"
         target="_blank">This document</a>—organized by academic year—gives
@@ -278,10 +280,10 @@
             <li>And finally, something I always try to do:  everyone plays at
             the end of a piece—at least one note!</li>
         </ul>
+        <img src="../images/music-images/diana-piano-3.jpg" class="rounded float-end" style="height: 400px; margin-left: 10px">
 
             <p><a
-            href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"
-            target="_blank">This document</a> examines eight of my orchestral
+            href="../docs/supplementary-materials/music-supplementary/orchestral-arrangements/A-IV-K-1-orchestral-arrangements.pdf"target="_blank">This document</a> examines eight of my orchestral
             arrangements, showing how I created stylistic consistency and a coherent
             group sound for OCO despite eclectic instrumentation and unbalanced
             wind, brass, and string sections.  Scores of these orchestral
