--- a/olin-subpages/ece.html
+++ b/olin-subpages/ece.html
@@ -30,10 +30,10 @@
             collapse on smaller screens -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="../index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="../about.html" class="nav-link">About</a>
                     </li>
                     
                     <li class="nav-item dropdown">
@@ -109,8 +109,9 @@
     </nav>
 
     <div class="container">
-        <h1>SUBPAGE Electrical & Computer Engineering (ECE) Curriculum Development</h1>
-
+        <h1>Electrical & Computer Engineering (ECE) Curriculum Development</h1>
+        <img src="../images/eng-images/diana-signals-1.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
+        
         <div>
             <p>I created the first versions of ECE core courses at Olin, i.e., those required for the major:  Signals and Systems, Digital Signal Processing, and Engineering System Analysis (the latter currently in development with Professors Chris Lee and Siddhartan Govindasamy).  My ECE courses were necessary not only to educate our students, but also to ensure accreditation for our engineering programs.  They comprised the signal processing part of Olin’s ECE portfolio submitted to ABET, the Accreditation Board for Engineering and Technology.  As a new college, we applied in 2006 for our first accreditation review, a process that recurs every six years after initial accreditation.  For Olin’s 2012 ABET accreditation process, I prepared the ABET documentation for Signals and Systems (a required course for the ECE degree).  For Olin’s 2012 and 2018 ABET accreditation reviews, I prepared the ABET documentation for Digital Signal Processing (an either/or ECE requirement that can be taken with, or instead of, Analog and Digital Communication).</p>
 
@@ -120,6 +121,7 @@
         </div>
 
         <h3>I. DIGITAL SIGNAL PROCESSING:  2009, 2010, 2011, 2012, (ON LEAVE SPRING 13), 2014, 2015, 2016 SPRING AND FALL, (ON LEAVE SPRING 18)</h3>
+        <img src="../images/eng-images/diana-signals-2.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
 
         <div>
             <p>What’s special about DSP as taught at Olin?</p>
@@ -149,12 +151,12 @@
 
             <p><a href="../docs/supplementary-materials/olin-supplementary/ece-curriculum/A-II-B-1-DSP-example-work.pdf">This document</a> contains examples of DSP assignments, labs, and student work, including a student’s final project, M-synth.</p>
 
-            <img src="../images/olin-images/ece_msynth.png">
+            <img src="../images/olin-images/ece-msynth.png">
             <p class="caption"> Graphical interface built for M-synth, a final project in DSP.</p>
         </div>
 
         <h3>II. SIGNALS AND SYSTEMS:  2003, 2004, 2005, 2006, 2007, (ON LEAVE SPRING 2008), 2012, 2019</h3>
-        <img src="./images/eng-images/diana-signals-1.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
+        <img src="../images/eng-images/diana-signals-3.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
 
         <div>
             <p>What’s different about the 2012 and 2019 editions of Signals and Systems?  In addition to engineering content, they addressed written communication according to a professional rubric, required revision of written material, and encouraged students to explore applications that pique their curiosity. For the 2012 version of Signals and Systems, I completely re-vamped the course to achieve a fresh perspective. Since its topics pervade contemporary applications, I offered opportunities for research and a final project (lifelong learning, stimulation/impetus, and application). As with DSP, I wanted to provide preparation/scaffolding for the Final Project by giving each student a chance to research and present an application that captured interest. To foster intrinsic motivation, I brought over elements of Digital Signal Processing and Wired Ensemble, such as giving students a “long rope” (lifelong learning). Thus, they had free reign to present any application that employed signals and/or systems, which meant basically everything!</p> 
@@ -190,7 +192,7 @@
         </div>
 
         <h3>III. ENGINEERING SYSTEM ANALYSIS</h3>
-        <img src="./images/eng-images/diana-signals-2.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
+        <img src="../images/eng-images/diana-signals-4.jpg" class="rounded float-end" style="height: 300px; margin-left: 10px">
 
         <div>
             <p>Engineering Systems Analysis (ESA) involves building, developing, and practicing process-based quantitative analysis skills in the broad area comprising linear analysis of engineering systems. During the first half of the semester, all engineering students take ESA:Systems.  During the second half, mechanical engineers enroll in ESA:Dynamics, and electrical engineers enroll in ESA:Signals.</p>
