Fixed CV opening to new tab and removed all DD in top left

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <!-- Responsive navbar -->
     <nav class="navbar navbar-expand-md bg-light navbar-light">
         <div class="container">
-            <a href="#" class="navbar-brand">DD</a>
+            <a href="#" class="navbar-brand"></a>
             
             <!-- Hamburger collapse button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
