--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Responsive navbar -->
     <nav class="navbar navbar-expand-md bg-light navbar-light">
         <div class="container">
-            <a href="#" class="navbar-brand">DD</a>
+            <!-- <a href="#" class="navbar-brand">DD</a> -->
             
             <!-- Hamburger collapse button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -90,7 +90,7 @@
             <div class="d-grid gap-2 d-md-flex mx-auto">
                 <a class="btn btn-outline-dark mx-auto" href="about.html" role="button">More About Diana</a>
 
-                <a class="btn btn-outline-dark mx-auto" href="docs/Diana Dabby CV.pdf" download  target="_blank" role="button">Curriculum Vitae</a>
+                <a class="btn btn-outline-dark mx-auto" href="docs/Diana Dabby CV.pdf" target="_blank" role="button">Curriculum Vitae</a>
             </div>
         
         <!-- A Three-Part Story -->
