--- a/eng-subpages/patents-trademarks.html
+++ b/eng-subpages/patents-trademarks.html
@@ -18,7 +18,7 @@
     <!-- Responsive navbar -->
     <nav class="navbar navbar-expand-md bg-light navbar-light">
         <div class="container">
-            <a href="#" class="navbar-brand">DD</a>
+            <a href="#" class="navbar-brand"></a>
             
             <!-- Hamburger collapse button -->
             <button class="navbar-toggler" type="button"
