--- a/music-subpages/scores.html
+++ b/music-subpages/scores.html
@@ -17,7 +17,7 @@
     <!-- Responsive navbar -->
     <nav class="navbar navbar-expand-md bg-light navbar-light">
         <div class="container">
-            <a href="../index.html" class="navbar-brand">DD</a>
+            <a href="../index.html" class="navbar-brand"></a>
             
             <!-- Hamburger collapse button -->
             <button class="navbar-toggler" type="button"
